<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/blue3_TUM">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            style="@style/MainHeading"
            android:text="@string/Title_Screen_2"
            android:id="@+id/textViewwhere"
            />

        <EditText
            style="@style/MainHeading.Button.Entry"
            android:layout_height="60sp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/room_enter_where"
            android:hint="@string/RoomNumber_Entry"
            android:textColorHint="@color/white_TUM"/>

        <Button
            style="@style/MainHeading.Button.Entry.go"
            android:id="@+id/search_where"
            android:layout_marginTop="20sp"
            android:text="@string/GO_Text"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">
        <!-- THIS PART IS NOT NEEDED YET IT IS THE ARROW

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/arrow"
            android:layout_gravity="bottom|left"
            />
-->
        <Button
            style="@style/MainHeading.Button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="20sp"
            android:id="@+id/back_where"
            android:text="@string/Back_Button"
            />


        <ImageView
            android:layout_height="100sp"
            android:layout_width="150sp"
            android:id="@+id/imageView2"
            android:src="@drawable/tum_white_alpha"
            android:contentDescription="@string/tum_white_alpha_description"
            android:layout_marginLeft="40dp"/>



    </LinearLayout>
</LinearLayout>




