<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FrontScreen"
    android:background="@color/blue3_TUM">
    <!-- CHECK THIS TO SEE WHY IT DOES NOT ALIGN TO THE RIGHT on the ImageView in whereami?
             Need to also create another button border for GO!
             Also create the transitions between the two screens
             -->
    <TextView
        style="@style/MainHeading.Information"
        android:text="@string/Welcome_Text_Header"
        android:id="@+id/textView" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2sp"
        android:id="@+id/separator"
        android:visibility="visible"
        android:background="@color/blue5_TUM"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/MainHeading"
            android:text="@string/Title_Screen1"
            android:id="@+id/textView2"
             />

        <Button
            style="@style/MainHeading.Button"
            android:id="@+id/show_loc_button"
            android:text="@string/Show_Location_Button"
            />

        <Button
            style="@style/MainHeading.Button"
            android:id="@+id/nav_button"
            android:layout_marginTop="20sp"
            android:text="@string/Navigate_to_room_Button"
           />

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_height="100sp"
                android:layout_width="150sp"
                android:id="@+id/imageView"
                android:src="@drawable/tum_white_alpha"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

